# lit_contextizer

./: .gitignore  README.md  README.rst  setup.cfg  tox.ini
context_annotation/: .gitignore  README.md
context_annotation/php/: add_annotation.php  annotate.php  db_connect.php  index.php
context_annotation/py/: createDB.py  dumpData.py  integrateNewData.py  loadData.py
context_terms/: README.md  extractContextTerms.py  generateCellContextsList.py  tabula_tissues_CTs.txt
contradiction_annotation/: README.md
contradiction_annotation/php/: add_annotation.php  annotate.php  index.php
contradiction_annotation/py/: createDB.py  dumpData.py  filterData.py  loadData.py
metadata/: .gitignore  Snakefile  gather_metadata.sh  integrateMetadataIntoDocs.py  makeMetadataDB.py  mergeDBs.py
misc_utils/: README.md  getNeededDocuments.py  makeExampleData.py
ml_filtering/: .gitignore  README.md  activelyLearn.py
notebooks/: DistantSupervisionPOC.ipynb  Generate Context-Relation Co-occur Gold Std Corpus.ipynb  Literature Contextizer Analyses Notebook.ipynb  Playing with Label Functions and Snorkel.ipynb
notebooks/.ipynb_checkpoints/: DistantSupervisionPOC-checkpoint.ipynb  Generate Context-Relation Co-occur Gold Std Corpus-checkpoint.ipynb  Literature Contextizer Analyses Notebook-checkpoint.ipynb  Playing with Label Functions and Snorkel-checkpoint.ipynb  Retrieve PMC Full Text-checkpoint.ipynb
relation_extraction/: .gitignore  README.md  Snakefile  addCitationDistances.py  annotateDepPaths.py  annotations.Gene_Gene.tsv  calcEmbeddings.py  countDepPaths.py  exploreEmbeddings.py  filterForWantedDepPaths.py  getSample.py  makeMatrix.py  parseForDepPaths.py  splitData.py  tidyAndCitationDistances.py
src/lit_contextizer/: __init__.py  __main__.py  cli.py
src/lit_contextizer.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  top_level.txt
src/lit_contextizer/classifiers/: AnalysisUtilities.py  TrainTransformers.py  VisualizationUtilities.py  label_functions.py
src/lit_contextizer/data_models/: DataLoader.py  DataLoaderUtilities.py  Extractable.py  MLStripper.py  Paper.py  PaperUtilities.py  Sentence.py  Utilities.py  Xml2PseudoJson.py  __init__.py  constants.py
src/lit_contextizer/data_models/resources/: background_synonyms.csv  dengue_ppi_paras.csv  disc_conc_synonyms.csv  methods_synonyms.csv  results_synonyms.csv  tabula_CTs.csv  tabula_tissues.csv  (+1 more)
tests/data_models/: __init__.py  test_loader.py  test_paper.py
tests/test_inputs/: annots_test_file.json  relationships_test_file.csv
