[metadata]
name = lit_contextizer 
version = 0.0.1-dev
description = A package for representing contextual features (e.g. cell type, species) from literature and detecting context-relationship associations 
long_description = file: README.rst

url = https://github.com/BenevolentAI/Stanford-Collab

author = Daniel Sosa and Jake Lever 
author_email = dnsosa@stanford.edu
maintainer = Daniel Sosa
maintainer_email = dnsosa@stanford.edu

# TO DO: Discuss license
license = MIT
license_file = LICENSE

#  Google "Python Trove Classifiers"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
keywords =
    deep learning
    NLP
    context
    protein-protein interactions
    genetics

[options]
install_requires =
    bioc
    biothings_client
    click
    click-plugins
    # en_core_sci_lg
    # en_core_web_sm
    fuzzywuzzy
    matplotlib
    matplotlib-venn
    networkx
    nltk
    numba
    numpy
    overrides
    pandas
    rapidfuzz
    sphinx
    scikit-learn
    scispacy
    sentence_transformers
    # spacy==2.1.9
    spacy
    tensorflow
    torch
    transformers
    wandb==0.9.4
    wget

# Example in case we need it
dependency_links =
    "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"
    "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.4/en_core_sci_lg-0.2.4.tar.gz"
    #"git+https://github.com/ncbi-nlp/bluebert.git"

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where's the code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    numpy
    pandas
    sklearn
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click
    tensorflow
testing =
    pytest

[options.entry_points]
console_scripts =
    lit-contextizer = lit_contextizer.cli:main

# Doc8 Config
[doc8]
max-line-length = 120

# Coverage config
[coverage:run]
branch = True
source = lit_contextizer 
omit =
    src/lit_contextizer/__main__.py
    src/lit_contextizer/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/lit_contextizer
    .tox/*/lib/python*/site-packages/lit_contextizer

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
